Добавляет исправления после созвона по 10 разделу

--- a/catalog.html
+++ b/catalog.html
@@ -145,6 +145,7 @@
                     type="number"
                     value="0"
                     placeholder="0"
+                    id="input-price-from"
                   /><span class="control-input-text">от</span></label
                 >
                 <label class="control"
@@ -154,6 +155,7 @@
                     type="number"
                     value="9000"
                     placeholder="0"
+                    id="input-price-to"
                   /><span class="control-input-text">до</span></label
                 >
               </div>
@@ -392,6 +394,7 @@
             type="email"
             placeholder="Ваш e-mail"
             name="client-email"
+            required
           />
           <button class="button subscribe-button" type="submit">
             Подписаться
@@ -565,6 +568,7 @@
                 <span
                   class="clients-number-button clients-number-button-minus"
                   aria-label="Кнопка Уменьшить количество."
+                  id="minus-adults-button"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -579,6 +583,7 @@
                 <span
                   class="clients-number-button clients-number-button-plus"
                   aria-label="Кнопка Увеличить количество."
+                  id="plus-adults-button"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -596,6 +601,7 @@
                   name="adults-number"
                   value="2"
                   placeholder="0"
+                  id="adults-input"
                 />
               </span>
             </label>
@@ -616,6 +622,7 @@
                 <span
                   class="clients-number-button clients-number-button-minus"
                   aria-label="Кнопка Уменьшить количество."
+                  id="minus-kids-button"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -630,6 +637,7 @@
                 <span
                   class="clients-number-button clients-number-button-plus"
                   aria-label="Кнопка Увеличить количество."
+                  id="plus-kids-button"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -648,6 +656,7 @@
                   name="kids-number"
                   value="2"
                   placeholder="0"
+                  id="kids-input"
                 />
               </span>
             </label>
