--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
             type="email"
             class="subscribe-email"
             placeholder="Ваш e-mail"
+            required
           />
           <button class="button subscribe-button" type="submit">
             Подписаться
@@ -366,6 +367,7 @@
                 <span
                   class="clients-number-button clients-number-button-minus"
                   aria-label="Кнопка Уменьшить количество."
+                  id="minus-adults-button"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -380,6 +382,7 @@
                 <span
                   class="clients-number-button clients-number-button-plus"
                   aria-label="Кнопка Увеличить количество."
+                  id="plus-adults-button"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -397,6 +400,7 @@
                   name="adults-number"
                   value="2"
                   placeholder="0"
+                  id="adults-input"
                 />
               </span>
             </label>
@@ -417,6 +421,7 @@
                 <span
                   class="clients-number-button clients-number-button-minus"
                   aria-label="Кнопка Уменьшить количество."
+                  id="minus-kids-button"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -431,6 +436,7 @@
                 <span
                   class="clients-number-button clients-number-button-plus"
                   aria-label="Кнопка Увеличить количество."
+                  id="plus-kids-button"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -449,6 +455,7 @@
                   name="kids-number"
                   value="2"
                   placeholder="0"
+                  id="kids-input"
                 />
               </span>
             </label>
